cabal-version: 3.0
name:          nbexp
version:       0

library
  default-language:   Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    EmptyCase
    GADTs
    PolyKinds
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeOperators

  hs-source-dirs:     src-hs
  exposed-modules:    Conv
  build-depends:
    , base      >=4.16     && <5
    , fin
    , sop-core  ^>=0.5.0.2
